@@ -1,12 +1,12 @@
 package com.webank.wedpr.components.dataset.datasource.dispatch;
 
-import com.webank.wedpr.components.dataset.datasource.DataSourceType;
 import com.webank.wedpr.components.dataset.datasource.processor.CsvDataSourceProcessor;
 import com.webank.wedpr.components.dataset.datasource.processor.DBDataSourceProcessor;
 import com.webank.wedpr.components.dataset.datasource.processor.DataSourceProcessor;
 import com.webank.wedpr.components.dataset.datasource.processor.HdfsDataSourceProcessor;
 import com.webank.wedpr.components.dataset.datasource.processor.HiveDataSourceProcessor;
 import com.webank.wedpr.components.dataset.datasource.processor.XlsxDataSourceProcessor;
+import com.webank.wedpr.components.db.mapper.dataset.datasource.DataSourceType;
 import java.util.HashMap;
 import java.util.Map;
 import org.slf4j.Logger;
@@ -54,7 +54,9 @@ public class DataSourceProcessorDispatcher {
         Class<?> aClass = dataSourcePreprocessorMap.get(upperCase);
         DataSourceProcessor dataSourceProcessor = null;
         try {
-            dataSourceProcessor = (DataSourceProcessor) aClass.newInstance();
+            //            dataSourceProcessor = (DataSourceProcessor) aClass.newInstance();
+            dataSourceProcessor =
+                    (DataSourceProcessor) aClass.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             logger.error("newInstance Exception, dataSourceType: {}, e: ", dataSourceType, e);
             throw new RuntimeException(e);
